# cobwebAI-llmlib

./: .gitignore  pyproject.toml
assets/: ai_lecture_3.m4a.0.mp3.txt  ai_lecture_3.m4a.1.mp3.txt  ai_lecture_3.m4a.2.mp3.txt  ai_lecture_3.m4a.3.mp3.txt  ai_lecture_3.m4a.4.mp3.txt  ai_lecture_3.m4a.5.mp3.txt  ai_lecture_3.m4a.6.mp3.txt  ai_lecture_3.m4a.txt  ai_lecture_3.m4a.txt_fixed.txt  ai_lecture_3.m4a.txt_fixed.txt_conspect.txt  ai_lecture_3.txt  ai_lecture_3_fixed_chunk3072.txt  ai_lecture_3_fixed_chunk3072.txt_conspect.txt  ai_lecture_3_fixed_chunk3500.txt  ai_lecture_3_fixed_chunk4096.txt
cobwebAI_llmlib/: audio.py  logger.py  text.py
cobwebai_lib/: __init__.py  audio.py  chat.py  llm.py  models.py  prompts.py  rag.py  text.py  vdb.py
langchain_playground/: audio.py  logger.py
multitenant/: chroma.sqlite3
tests/: test_audio.py  test_chat.py  test_rag.py  test_text.py  test_vdb.py
