[tool.poetry]
name = "cobwebai-lib"
version = "0.1.8"
description = ""
authors = ["SERGEYDJUM <39106181+SERGEYDJUM@users.noreply.github.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
langchain = "^0.3.20"
langchain-openai = "^0.3.7"
langchain-chroma = "^0.2.2"
openai = "^1.65.3"
aiofiles = "^24.1.0"
semchunk = "^3.1.1"
tiktoken = "^0.9.0"
loguru = "^0.7.3"
assemblyai = "^0.37.0"
anthropic = "^0.49.0"
langchain-anthropic = "^0.3.9"

[tool.poetry.group.test.dependencies]  
pytest = "^8.3.5"  

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
